tests/snapshots/examples_fixtures/Modules__Day12Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Day12Solver.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Day12Solver` doesn't match file path `examples/Modules/Day12Solver.flx`.

  --> examples/Modules/Day12Solver.flx:3:1
  |
3 | module Modules.Day12Solver {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
